# vault-in-place-encryption

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: artifacts.yml  ruff.yml
src/vault_in_place_enc/: cli.py  crypto.py  vault.py
